--- a/MichaelHeenanBlog/Pages/CreateBlogPost.cshtml
+++ b/MichaelHeenanBlog/Pages/CreateBlogPost.cshtml
@@ -18,7 +18,14 @@
             Body
             <input asp-for="BlogPost.Body" type="text" class="form-control" aria-describedby="bodyHelp" placeholder="Body">
         </label>
-        <small id="bodyHelp" class="form-text text-muted">The title of the blog post</small>
+        <small id="bodyHelp" class="form-text text-muted">The body of the blog post</small>
+    </div>
+    <div class="form-group">
+        <label>
+            Tags
+            <input asp-for="BlogPost.Tags" type="text" class="form-control" aria-describedby="tagHelp" placeholder="tags">
+        </label>
+        <small id="tagHelp" class="form-text text-muted">The tags of the blogpost (space separated list)</small>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
