--- a/MichaelHeenanBlog/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Pages/Index.cshtml
@@ -1,10 +1,34 @@
 ﻿@page
-@model IndexModel
+@model MichaelHeenanBlog.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+
+    @foreach (var blogPost in Model.BlogPostModels)
+    {
+    <div class="card text-center">
     
+        <h2>@blogPost.Title</h2>
+        <h3>@blogPost.Body</h3>
+    
+        <div class="card">
+            @if (blogPost.Tags == null)
+            {
+                <p>No Tags added to post</p>
+            }
+            else
+            {
+                @foreach (var tag in blogPost.Tags)
+                {
+                    <p>@tag.DisplayName</p>
+                }
+            }
+        </div>
+    
+    </div>   
+    }
+
 </div>
