Add BlogPostSummary Class, Fix Tags not displaying

--- a/MichaelHeenanBlog/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
 
-    @foreach (var blogPost in Model.BlogPostModels)
+    @foreach (var blogPost in Model.BlogPostSummary)
     {
     <div class="card text-center">
     
