--- a/MichaelHeenanBlog/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Pages/Index.cshtml
@@ -6,6 +6,7 @@
 
     <div class="bg-light">
         <h1 class="display-4 text-center">Blog!</h1>
+        <a href="../SignIn">Sign In</a>
 
         @*@foreach (var blogPost in Model.BlogPostSummarys)
         {
@@ -35,5 +36,4 @@
         {
             <partial name="_BlogPostSummary" model="blogpost" />
         }
-
     </div>
