--- a/MichaelHeenanBlog/Pages/SignIn.cshtml
+++ b/MichaelHeenanBlog/Pages/SignIn.cshtml
@@ -11,16 +11,17 @@
         <div class="form-group">
             <label>
                 Username
-                <input asp-for="AdminLogin.Username" type="text" class="form-control" aria-describedby="titleHelp" placeholder="Title">
+                <input asp-for="AdminLogin.Username" type="text" class="form-control" aria-describedby="titleHelp" placeholder="Username">
             </label>
             <small id="titleHelp" class="form-text text-muted">Enter your Username</small>
         </div>
         <div class="form-group">
             <label>
                 Password
-                <input asp-for="AdminLogin.Password" type="text" class="form-control" aria-describedby="bodyHelp" placeholder="Body">
+                <input asp-for="AdminLogin.Password" type="password" class="form-control" aria-describedby="bodyHelp" placeholder="Password">
             </label>
             <small id="bodyHelp" class="form-text text-muted">Enter your Password</small>
         </div>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 </div>
