Add View Single Post Function

--- a/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
+++ b/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
@@ -6,7 +6,7 @@
 
 <h1>View Single BlogPost</h1>
 
-@*<div class="card mb-4 border-primary">
+<div class="card mb-4 border-primary">
     <div class="card-header text-center">
         <a asp-page="./ViewSingleBlogPost"
            asp-route-blogPostId="@Model.BlogPost.Id">
@@ -58,4 +58,4 @@
         }
     </div>
 
-</div>*@
+</div>
