--- a/MichaelHeenanBlog/Areas/Admin/Pages/_BlogPostSummary.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/_BlogPostSummary.cshtml
@@ -6,7 +6,7 @@
     <div class="card mb-4 border-primary">
         <div class="card-header text-center">
             <a  asp-page="./ViewSingleBlogPost"
-                asp-route-blogPostId="@Model.Tags.ElementAt(0).BlogPostId">
+                asp-route-blogPostId="@Model.BlogPostId">
                 <h3>@Model.Title</h3>
             </a>
         </div>
@@ -16,7 +16,7 @@
 
         <div class="card-footer text-center">
 
-            @if (Model.Tags == null)
+            @if (Model.Tags?.Any() != true)
             {
                 <div class="card-footer text-center">
                     <p>Blog Post has no tags</p>
