--- a/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
+++ b/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
@@ -7,8 +7,9 @@
 <h1>View Single BlogPost</h1>
 
 <div class="card mb-4 border-primary">
-    <div class="card-header text-center">
-            <h3>@Model.BlogPost.Title</h3>
+    <div class="card-header">
+        <span class="align-text-bottom text-left">@Model.BlogPost.CreatedAt</span>    
+        <h3 class="text-center">@Model.BlogPost.Title</h3>
     </div>
     <div class="card-body">
         <p>@Model.BlogPost.Body</p>
