--- a/MichaelHeenanBlog/Pages/Shared/_Layout.cshtml
+++ b/MichaelHeenanBlog/Pages/Shared/_Layout.cshtml
@@ -44,13 +44,13 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Post List</a>
+                                <a class="nav-link text-dark" asp-area="Admin" asp-page="/Index">Post List</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Create Post</a>
+                                <a class="nav-link text-dark" asp-area="Admin" asp-page="/CreateBlogPost">Create Post</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Sign Out</a>
+                                <a class="nav-link text-dark" asp-area="Admin" asp-page="/SignOut">Sign Out</a>
                             </li>
                         }
                     </ul>
