--- a/MichaelHeenanBlog/Pages/Shared/_BlogPostSummary.cshtml
+++ b/MichaelHeenanBlog/Pages/Shared/_BlogPostSummary.cshtml
@@ -26,7 +26,7 @@
             {
                 @foreach (var tag in Model.Tags)
                 {
-                    <a class="btn btn-outline-primary"
+                    <a class="badge badge-pill badge-secondary"
                        asp-page="./ViewSingleBlogPost"
                        asp-route-blogPostId="@tag.BlogPostId">
                         @tag.DisplayName
