Add Routing to Admin Index page edit and delete

--- a/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
@@ -19,10 +19,10 @@
                     <td>@blogpost.Title</td>
                     <td>@blogpost.Body</td>
                     <td>
-                        <a class="btn btn-outline-primary">
+                        <a class="btn btn-outline-primary" asp-area="Admin" asp-page="/EditPost">
                             Edit Post
                         </a>
-                        <a class="btn btn-outline-primary">
+                        <a class="btn btn-outline-primary" asp-area="Admin" asp-page="/DeletePost">
                             Delete Post
                         </a>
                     </td>
