--- a/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
@@ -2,3 +2,12 @@
 @model MichaelHeenanBlog.Areas.Admin.Pages.DeletePostModel
 @{
 }
+
+    <H1>Delete Post</H1>
+
+    <form method="post">
+        <p>Are you sure you want to delete this Post?</p>
+
+        <button type="submit" class="btn btn-primary">Yes</button>
+        <a asp-area="Admin" asp-page="/Index" class="btn btn-primary">No</a>
+    </form>
