Add Slugify when creating tags. Add Markdown to blog post summary

--- a/MichaelHeenanBlog/Areas/Admin/Pages/CreateBlogPost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/CreateBlogPost.cshtml
@@ -25,7 +25,7 @@
             Tags
             <input asp-for="BlogPost.Tags" type="text" class="form-control" aria-describedby="tagHelp" placeholder="tags">
         </label>
-        <small id="tagHelp" class="form-text text-muted">The tags of the blogpost (space separated list)</small>
+        <small id="tagHelp" class="form-text text-muted">The tags of the blogpost (comma separated list)</small>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
