--- a/MichaelHeenanBlog/Areas/Admin/Pages/CreateBlogPost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/CreateBlogPost.cshtml
@@ -16,7 +16,7 @@
     <div class="form-group">
         <label>
             Body
-            <input asp-for="BlogPost.Body" type="text" class="form-control" aria-describedby="bodyHelp" placeholder="Body">
+            <textarea asp-for="BlogPost.Body" type="text" class="form-control " aria-describedby="bodyHelp" placeholder="Body"></textarea>
         </label>
         <small id="bodyHelp" class="form-text text-muted">The body of the blog post</small>
     </div>
