--- a/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
@@ -7,7 +7,7 @@
 
 <form method="post">
     <p>Are you sure you want to delete this Post?</p>
-    <input type="hidden" asp-for="BlogpostId" value="@Model.BlogPost.Id" />
+    <input type="hidden" asp-for="BlogPostId" value="@Model.BlogPost.Id" />
     <button type="submit" class="btn btn-primary">Yes</button>
     <a asp-area="Admin" asp-page="/Index" class="btn btn-primary">No</a>
 </form>
