--- a/MichaelHeenanBlog/Areas/Admin/Pages/EditPost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/EditPost.cshtml
@@ -1,6 +1,64 @@
-﻿@page
+﻿@page "{blogPostId:Guid}"
 @model MichaelHeenanBlog.Areas.Admin.Pages.EditPostModel
 @{
 }
 
-    <h1>Edit Post</h1>
+<h1>Edit Post</h1>
+
+<form method="post">
+    <p>Are you sure you want to delete this Post?</p>
+    <input type="hidden" asp-for="BlogPostId" value="@Model.BlogPost.Id" />
+    <button type="submit" class="btn btn-primary">Yes</button>
+    <a asp-area="Admin" asp-page="/Index" class="btn btn-primary">No</a>
+</form>
+
+<div class="card mb-4 border-primary mt-3">
+    <div class="card-header">
+        <span class="align-text-bottom text-left">@Model.BlogPost.CreatedAt</span>
+        <h3 class="text-center">@Model.BlogPost.Title</h3>
+    </div>
+    <div class="card-body">
+        <p>@Model.BlogPost.Body</p>
+    </div>
+
+    <div class="card-footer text-center">
+
+        @if (Model.BlogPost.Tags?.Any() != true)
+        {
+            <div class="card-footer text-center">
+                <p>Blog Post has no tags</p>
+            </div>
+        }
+        else
+        {
+            @foreach (var tag in Model.BlogPost.Tags)
+            {
+                <a class="badge badge-pill badge-secondary text-center"
+                   asp-page="./ViewSingleBlogPost"
+                   asp-route-blogPostId="@tag.BlogPostId">
+                    @tag.DisplayName
+                </a>
+            }
+        }
+
+    </div>
+
+</div>
+
+<div class="card mb-4 border-primary">
+
+    <div class="card-body">
+        @if (Model.BlogPost.Comments?.Any() != true)
+        {
+            <p>Blog Post has no Comments</p>
+        }
+        else
+        {
+            @foreach (var comment in Model.BlogPost.Comments)
+            {
+                <p>woo comments </p>
+            }
+        }
+    </div>
+
+</div>
