Add Edit Blog Post Title and Body functionality

--- a/MichaelHeenanBlog/Areas/Admin/Pages/EditPost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/EditPost.cshtml
@@ -21,17 +21,17 @@
     <div class="form-group">
         <label>
             Body
-            <textarea asp-for="PostContent.Body" type="text" class="form-control " aria-describedby="bodyHelp">@Model.BlogPost.Body</textarea>
+            @Html.TextArea("PostContent.Body", Model.BlogPost.Body, new { @class = "form-control", @cols = 100, @rows = 20 })
         </label>
         <small id="bodyHelp" class="form-text text-muted">The body of the blog post</small>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         <label>
             Tags
-            <input asp-for="PostContent.Tags" type="text" class="form-control" aria-describedby="tagHelp" placeholder="tags">
+            <input asp-for="PostContent.Tags" type="text" class="form-control" aria-describedby="tagHelp">
         </label>
         <small id="tagHelp" class="form-text text-muted">The tags of the blogpost (comma separated list)</small>
-    </div>
+    </div>*@
 </form>
 
 
