--- a/MichaelHeenanBlog/Pages/Shared/_BlogPostSummary.cshtml
+++ b/MichaelHeenanBlog/Pages/Shared/_BlogPostSummary.cshtml
@@ -10,7 +10,7 @@
                 <h3>@Model.Title</h3>
             </a>
         </div>
-        <div class="card-body">
+        <div class="card-body align-text-top" style="max-height:100px; overflow-y:auto;">
             <p>@Model.Body</p>
         </div>
 
