--- a/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
@@ -17,7 +17,7 @@
             {
                 <tr class="text-center">
                     <td class="text-nowrap border-primary">@blogPost.Title</td>
-                    <td class="border-primary">@blogPost.Body</td>
+                    @*<td class="border-primary">@blogPost.Body</td>*@
                     <td class="border-primary">
                         <div class="dropdown">
                             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
