--- a/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
+++ b/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "View Single BlogPost";
 }
 
-<h1>View Single BlogPost</h1>
-
 <div class="card mb-4 border-primary">
     <div class="card-header">
-        <span class="align-text-bottom text-left">@Model.BlogPost.CreatedAt</span>    
+        <span class="align-text-bottom text-left">@Model.BlogPost.DateCreated</span>    
         <h3 class="text-center">@Model.BlogPost.Title</h3>
     </div>
     <div class="card-body">
@@ -42,13 +40,13 @@
 <div class="card mb-4 border-primary">
     
     <div class="card-body">
-        @if (Model.BlogPost.Comments?.Any() != true)
+        @if (Model.Comments?.Any() != true)
         {
             <p>Blog Post has no Comments</p>
         }
         else
         {
-            @foreach (var comment in Model.BlogPost.Comments)
+            @foreach (var comment in Model.Comments)
             {
                 <p>woo comments </p>
             }
