Fix Routing Admin Index page.

--- a/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="bg-light">
-    <h1 class="display-4 text-center">Blog!</h1>
+    <h2 class="display-4 text-center">Edit Posts</h2>
 
     <table class="table">
         @foreach (var blogPost in Model.PagedPosts)
@@ -37,27 +37,27 @@
             @if (Model.Pager.CurrentPage > 1)
             {
                 <li class="page-item">
-                    <a class="page-link" href="/">First</a>
+                    <a class="page-link" href="/Admin">First</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="/?p=@(Model.Pager.CurrentPage - 1)">Previous</a>
+                    <a class="page-link" href="/Admin?p=@(Model.Pager.CurrentPage - 1)">Previous</a>
                 </li>
             }
 
             @foreach (var p in Model.Pager.Pages)
             {
                 <li class="page-item @(p == Model.Pager.CurrentPage ? "active" : "")">
-                    <a class="page-link" href="/?p=@p">@p</a>
+                    <a class="page-link" href="/Admin?p=@p">@p</a>
                 </li>
             }
 
             @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
             {
                 <li class="page-item">
-                    <a class="page-link" href="/?p=@(Model.Pager.CurrentPage + 1)">Next</a>
+                    <a class="page-link" href="/Admin?p=@(Model.Pager.CurrentPage + 1)">Next</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="/?p=@(Model.Pager.TotalPages)">Last</a>
+                    <a class="page-link" href="/Admin?p=@(Model.Pager.TotalPages)">Last</a>
                 </li>
             }
         </ul>
