--- a/MichaelHeenanBlog/Areas/Admin/Pages/DeleteComment.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/DeleteComment.cshtml
@@ -5,7 +5,7 @@
 
     <form method="post">
         <p>Are you sure you want to delete this Comment?</p>
-        <input type="hidden" asp-for="CommentId" value="@Model.CommentData.Id" />
+        <input type="hidden" asp-for="CommentId" value="@Model.CommentId" />
         <button type="submit" class="btn btn-primary">Yes</button>
         <a asp-area="" asp-page="/ViewSingleBlogPost" asp-route-blogPostId="@Model.CommentBlogPostId" class="btn btn-primary">No</a>
     </form>
