--- a/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
+++ b/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
@@ -6,7 +6,7 @@
 
 <div class="card mb-4 border-primary">
     <div class="card-header">
-        <span class="align-text-bottom text-left">@Model.BlogPost.DateCreated</span>    
+        <span class="align-text-bottom text-left">@Model.BlogPost.DateCreated</span>
         <h3 class="text-center">@Model.BlogPost.Title</h3>
     </div>
     <div class="card-body">
@@ -37,6 +37,8 @@
 
 </div>
 
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Take a Look at this Post!" data-show-count="false">Tweet</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 @if (Model.Comments?.Any() != true)
 {
@@ -52,17 +54,17 @@ else
     {
         <div class="card mb-4 border-primary">
             <div class="card-body">
-                
+
                 <div>
                     <p><span class="text-monospace">@comment.AuthorName</span> <span class="text-monospace">@comment.CreatedAt</span></p>
                 </div>
 
                 <p>@comment.Body</p>
-                
+
                 @if (User.Identity.IsAuthenticated)
                 {
                     <a class="btn btn-danger" asp-area="Admin" asp-page="./DeleteComment"
-               asp-route-commentId="@comment.Id">Delete Comment</a>
+                       asp-route-commentId="@comment.Id">Delete Comment</a>
                 }
             </div>
         </div>
