--- a/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
@@ -45,20 +45,28 @@
 
 </div>
 
-<div class="card mb-4 border-primary">
+<div class="card-body">
+    @if (Model.BlogPost.Comments?.Any() != true)
+    {
+        <p>Blog Post has no Comments</p>
+    }
+    else
+    {
+        @foreach (var comment in Model.BlogPost.Comments)
+        {
+            <div class="card mb-4 border-primary">
+                <div class="card-body">
+                    <div>
+                        <p><span class="text-monospace">@comment.AuthorName</span> <span class="text-monospace">@comment.CreatedAt</span></p>
+                    </div>
 
-    <div class="card-body">
-        @if (Model.BlogPost.Comments?.Any() != true)
-        {
-            <p>Blog Post has no Comments</p>
+                    <p>@comment.Body</p>
+                        
+                </div>
+
+            </div>
         }
-        else
-        {
-            @foreach (var comment in Model.BlogPost.Comments)
-            {
-                <p>woo comments </p>
-            }
-        }
-    </div>
+
+    }
 
 </div>
