--- a/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
@@ -45,28 +45,31 @@
 
 </div>
 
-<div class="card-body">
-    @if (Model.BlogPost.Comments?.Any() != true)
-    {
-        <p>Blog Post has no Comments</p>
-    }
-    else
-    {
-        @foreach (var comment in Model.BlogPost.Comments)
-        {
-            <div class="card mb-4 border-primary">
-                <div class="card-body">
-                    <div>
-                        <p><span class="text-monospace">@comment.AuthorName</span> <span class="text-monospace">@comment.CreatedAt</span></p>
-                    </div>
 
-                    <p>@comment.Body</p>
-                        
+@if (Model.BlogPost.Comments?.Any() != true)
+{
+    <div class="card mb-4 border-primary text-center">
+        <div class="card-body">
+            <p>Blog Post has no Comments</p>
+        </div>
+    </div>
+}
+else
+{
+    @foreach (var comment in Model.BlogPost.Comments)
+    {
+        <div class="card mb-4 border-primary">
+            <div class="card-body">
+                <div>
+                    <p><span class="text-monospace">@comment.AuthorName</span> <span class="text-monospace">@comment.CreatedAt</span></p>
                 </div>
 
-            </div>
-        }
+                <p>@comment.Body</p>
 
+            </div>
+
+        </div>
     }
 
-</div>
+}
+
