Fix Tag Links when Viewing Single Post

--- a/MichaelHeenanBlog/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Pages/Index.cshtml
@@ -45,5 +45,13 @@
             }
         </ul>
     </nav>
+
+    <div class="tag tag-cloud">
+        <h4 class="text-center">Tag Cloud</h4>
+        @foreach (var tag in Model.TagCloud)
+        {
+            <span class="tag kind-@tag.Category">@tag.Text</span>
+        }
+    </div>
 }
 
